--- a/projects/ngx-api-validator/package.json
+++ b/projects/ngx-api-validator/package.json
@@ -8,6 +8,10 @@
     "url": "https://github.com/plavc/ngx-api-validator/issues"
   },
   "homepage": "https://github.com/plavc/ngx-api-validator#readme",
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/plavc/ngx-api-validator"
+  },
   "keywords": [
     "typescript",
     "json",
